--- a/discord/index.html
+++ b/discord/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html>
 <head>
+	<meta http-equiv="refresh" content="0; url=https://youtube.com/darshigamerop">
+	
+</head>
+<body>
+
+
+
+	
+</body>
+</html>
