--- a/index.html
+++ b/index.html
@@ -1,1 +1,77 @@
-Darshi Network <br> Comming Soon!!!
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Landing Page With Light/Dark Mode</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <main>
+      <div class="big-wrapper light">
+        <img src="./img/shape.png" alt="" class="shape" />
+
+        <header>
+          <div class="container">
+            <div class="logo">
+              <img src="./img/logo.png" alt="Logo" />
+              <h3>Darshi Network</h3>
+            </div>
+
+            <div class="links">
+              <ul>
+                <li><a href="https://darshinetwork.tk/discord">Discord</a></li>
+                <li><a href="#">Bots</a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#" class="btn"></a></li>
+              </ul>
+            </div>
+
+            <div class="overlay"></div>
+
+            <div class="hamburger-menu">
+              <div class="bar"></div>
+            </div>
+          </div>
+        </header>
+
+        <div class="showcase-area">
+          <div class="container">
+            <div class="left">
+              <div class="big-title">
+                <h1>Darshi</h1>
+                <h1>Network</h1>
+              </div>
+              <p class="text">
+                We provide Discord Bots , Websites , and more ( paid & sponsor both )
+                24/7 
+              </p>
+              <div class="cta">
+                <a href="https://darshinetwork.tk/discord" class="btn">Join Discord</a>
+              </div>
+            </div>
+
+            <div class="right">
+          <!--    <img src="./img/person.png" alt="Person Image" class="person" /> -->
+            </div>
+          </div>
+        </div>
+
+        <div class="bottom-area">
+          <div class="container">
+            <button class="toggle-btn">
+              <i class="far fa-moon"></i>
+              <i class="far fa-sun"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <!-- JavaScript Files -->
+
+    <script src="https://kit.fontawesome.com/a81368914c.js"></script>
+    <script src="./app.js"></script>
+  </body>
+</html>
