--- a/DN-MOD/index.html
+++ b/DN-MOD/index.html
@@ -27,7 +27,7 @@
                     <ul class="nav navbar-nav">
                         <li class="nav-item"><a class="nav-link active smoothScroll" href="#feature" style="color: var(--text-color);">Features</a></li>
                         <li class="nav-item"><a class="nav-link smoothScroll" href="#commands" style="color: var(--text-color);">Commands</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#" style="color: var(--text-color);">Invite</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://discord.com/api/oauth2/authorize?client_id=894582936609886258&permissions=8&scope=bot" style="color: var(--text-color);">Invite</a></li>
                     </ul>
             </div>
     </div>
@@ -36,7 +36,7 @@
     <header class="d-xl-flex flex-column justify-content-xl-center align-items-xl-center" style="height: 418px;text-align: center;margin: 55px;"><img class="rounded" src="https://media.discordapp.net/attachments/898224176702316584/898228701592956978/MOSHED-2021-10-13-21-38-59.gif" width="150" height="150" style="margin-top: 30px;">
         <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color);">DN Music</h1>
         <p style="color: var(--secondary-text-color);">a bot that plays music just for you</p>
-        <div class="tada animated"><div role="group" class="btn-group">    <a href="https://discord.com/invite/" class="btn btn-primary shadow-none" type="button" style="margin: 5px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;">Invite Me</a>
+        <div class="tada animated"><div role="group" class="btn-group">    <a href="https://discord.com/api/oauth2/authorize?client_id=894582936609886258&permissions=8&scope=bot" class="btn btn-primary shadow-none" type="button" style="margin: 5px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;">Invite Me</a>
 	
 	<a class="btn btn-primary smoothScroll shadow-none" role="button" style="margin: 5px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;"
         href="#feature">Features</a></div></div>
