--- a/DN-Music/index.html
+++ b/DN-Music/index.html
@@ -135,7 +135,7 @@
             </div>
             <p class="copyright" style="color: var(--text-color);">DN Music © 2021</p>
             <p class="copyright" style="color: var(--text-color);padding: 0px;">
-             Web By by&nbsp;<a href="https://itshoozi.com" style="color: var(--main-color);">Darshi Network</a></p>
+             Web By by&nbsp;<a href="https://darshinetwork.tk" style="color: var(--main-color);">Darshi Network</a></p>
         </div>
     </div>
     <script src="assets/js/jquery.min.js"></script>
