--- a/discord/index.html
+++ b/discord/index.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="refresh" content="0; url=https://discord.gg/cg7E7NPwEY">
-	
+	<title>*â‚Šð“†©Darshi Networkð“†ª*â‚Š</title>
+<meta property="og:site_name" content="You have been invited to join a server!">
+<meta property="og:title" content="*â‚Šð“†©Darshi Networkð“†ª*â‚Š">
+<meta property="og:image" content="../external.html?link=https://cdn.discordapp.com/icons/760856267660329010/aba405a86f693a7fa575ae712e0d4c28?size=256">
+<meta property="og:description" content="Invited by *â‚Šð“†©âš˜â‚ŠÎ¶ÍœÍ¡Darshið“†ª">
+<meta property="twitter:card" content="summary">
+<meta property="twitter:title" content="*â‚Šð“†©Darshi Networkð“†ª*â‚Š">
+<meta property="twitter:image" content="https://cdn.discordapp.com/icons/760856267660329010/aba405a86f693a7fa575ae712e0d4c28?size=256">
+<meta property="twitter:description" content="Invited by *â‚Šð“†©âš˜â‚ŠÎ¶ÍœÍ¡Darshið“†ª">
+<meta name="theme-color" content="#7289DA">
+<meta http-equiv="refresh" content="0; url=../external.html?link=https://discord.gg/6R2uXJH2v2">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
