--- a/discord/index.html
+++ b/discord/index.html
@@ -4,7 +4,7 @@
 	<title>*â‚Šð“†©Darshi Networkð“†ª*â‚Š</title>
 <meta property="og:site_name" content="You have been invited to join a server!">
 <meta property="og:title" content="*â‚Šð“†©Darshi Networkð“†ª*â‚Š">
-<meta property="og:image" content="../external.html?link=https://cdn.discordapp.com/icons/760856267660329010/aba405a86f693a7fa575ae712e0d4c28?size=256">
+<meta property="og:image" content="https://cdn.discordapp.com/icons/760856267660329010/aba405a86f693a7fa575ae712e0d4c28?size=256">
 <meta property="og:description" content="Invited by *â‚Šð“†©âš˜â‚ŠÎ¶ÍœÍ¡Darshið“†ª">
 <meta property="twitter:card" content="summary">
 <meta property="twitter:title" content="*â‚Šð“†©Darshi Networkð“†ª*â‚Š">
