--- a/discord/index.html
+++ b/discord/index.html
@@ -5,11 +5,11 @@
 <meta property="og:site_name" content="You have been invited to join a server!">
 <meta property="og:title" content="*₊𓆩Darshi Network𓆪*₊">
 <meta property="og:image" content="https://cdn.discordapp.com/icons/760856267660329010/aba405a86f693a7fa575ae712e0d4c28?size=256">
-<meta property="og:description" content="Invited by *â‚Šð“†©âš˜â‚ŠÎ¶ÍœÍ¡Darshið“†ª">
+<meta property="og:description" content=" Invited by *₊𓆩⚘₊ζ͜͡Darshi𓆪">
 <meta property="twitter:card" content="summary">
 <meta property="twitter:title" content="*₊𓆩Darshi Network𓆪*₊">
 <meta property="twitter:image" content="https://cdn.discordapp.com/icons/760856267660329010/aba405a86f693a7fa575ae712e0d4c28?size=256">
-<meta property="twitter:description" content="Invited by *â‚Šð“†©âš˜â‚ŠÎ¶ÍœÍ¡Darshið“†ª">
+<meta property="twitter:description" content="Invited by *₊𓆩⚘₊ζ͜͡Darshi𓆪">
 <meta name="theme-color" content="#7289DA">
 <meta http-equiv="refresh" content="0; url=../external.html?link=https://discord.gg/6R2uXJH2v2">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
