--- a/discord/index.html
+++ b/discord/index.html
@@ -11,7 +11,7 @@
 <meta property="twitter:image" content="https://cdn.discordapp.com/icons/760856267660329010/aba405a86f693a7fa575ae712e0d4c28?size=256">
 <meta property="twitter:description" content="Invited by *₊𓆩⚘₊ζ͜͡Darshi𓆪">
 <meta name="theme-color" content="#7289DA">
-<meta http-equiv="refresh" content="0; url=../external.html?link=https://discord.gg/6R2uXJH2v2">
+<meta http-equiv="refresh" content="0; url=https://discord.gg/6R2uXJH2v2">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
