--- a/nitro-gen/index.html
+++ b/nitro-gen/index.html
@@ -1,7 +1,6 @@
 <html>
 
-<!-- Mirrored from nitro-gen.phantomcodes.ga/ by HTTrack Website Copier/3.x [XR&CO'2017], Sun, 17 Oct 2021 12:17:12 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+
 <head>
 <title>Discord Nitro Generator</title>
 <link rel="shortcut icon" type="https://i.imgur.com/YDT4557.jpg" href="../i.imgur.com/YDT4557.jpg">
@@ -11,7 +10,7 @@
 <meta property="og:title" content="Discord Nitro Generator" />
 <meta property="og:description" content="A Nitro Generator for Everyone! Built with Love! ❤️ And a little HTML, CSS, and JS. Built and Maintained by Team Darshi Network" />
 <meta property="og:url" content="../external.html?link=https://darshinetwork.tk/discord"/>
-<meta content="https://i.imgur.com/YDT4557.jpg" property="og:image">
+<meta content="https://media.discordapp.net/attachments/898223879040958494/899214553928302592/Untitled332.png" property="og:image">
 <meta charset="utf-8">
 </head>
 <body>
@@ -60,5 +59,4 @@ Join my Discord Server : https://darshinetwork.tk/discord
 </script>
 </body>
 
-<!-- Mirrored from nitro-gen.phantomcodes.ga/ by HTTrack Website Copier/3.x [XR&CO'2017], Sun, 17 Oct 2021 12:17:29 GMT -->
 </html>
