--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="links">
               <ul>
                 <li><a href="https://darshinetwork.tk/discord">Discord</a></li>
-                <li><a href="#">Bots</a></li>
+                <li><a href="/nitro-gen">Nitro Gen</a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#" class="btn"></a></li>
               </ul>
